# driftguard

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  SETUP_GCP.md  bootstrap.sh  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  skills-lock.json
.codanna/: settings.toml
apps/api/: Dockerfile  alembic.ini  deploy-fly.sh  docker-compose.yml  fly.toml  pyproject.toml  start.sh  test_analysis.py
apps/api/driftguard/: main.py
apps/api/driftguard/ai/: findings.py  formatter.py  llm_router.py  reviewer.py
apps/api/driftguard/api/: deps.py
apps/api/driftguard/api/v1/: __init__.py  analyses.py  aws.py  billing.py  dashboard.py  events.py  finops.py  health.py  incidents.py  ingest.py  memory.py  orgs.py  policies.py  repos.py  scans.py  stripe_webhooks.py  tokens.py  webhooks.py  ws.py
apps/api/driftguard/compliance/: __init__.py  controls.py  mappings.py
apps/api/driftguard/core/: auth.py  config.py  db.py  logging.py  observability.py  rate_limit.py  ratelimit.py  workspace.py
apps/api/driftguard/db/: models.py  seed.py
apps/api/driftguard/db/migrations/: env.py
apps/api/driftguard/db/migrations/versions/: 001_init_schema.py  002_pgvector_embeddings.py  003_runtime_events_drift_incidents.py  004_contact_email.py  005_policy_rules.py  006_platform_foundation.py  007_org_settings.py  008_analysis_contact_email.py  009_findings_rich_fields.py  010_analysis_files_scanned.py  010_quota_enforcement.py  011_stripe_event_idempotency.py  012_github_delivery_idempotency.py  013_analysis_scan_errors.py  014_analyses_perf_indexes.py  015_analysis_policy_verdict.py  016_analysis_file_type_counts.py  018_finops_reviews.py
apps/api/driftguard/events/: publisher.py  schemas.py
apps/api/driftguard/integrations/: aws.py  checkov.py  drift.py  git.py  github.py  infracost.py  terraform.py
apps/api/driftguard/middleware/: rbac.py
apps/api/driftguard/services/: analytics.py  audit.py  auth.py  billing.py  email.py  embeddings.py  finops_pipeline.py  inline_review.py  memory_recall.py  onboarding.py  policy_engine.py  quota.py  slack.py  storage.py
apps/api/driftguard/services/analysis/: ai_review.py
apps/api/driftguard/services/finops/: __init__.py  engine.py
apps/api/driftguard/services/finops/estimators/: aws.py  azure.py  dispatcher.py  gcp.py
apps/api/driftguard/services/finops/github/: comment.py
apps/api/driftguard/services/finops/parsers/: terraform_diff.py
apps/api/driftguard/services/finops/pricing/: aws.py  azure.py  gcp.py
apps/api/driftguard/services/finops/recommendations/: rules.py
apps/api/driftguard/services/finops/scoring/: risk.py
apps/api/driftguard/services/scanner/: __init__.py  engine.py
apps/api/driftguard/services/scanner/rules/: github_actions.py  kubernetes.py  terraform.py
apps/api/driftguard/services/terraform/: plan_parser.py  risk_scorer.py
apps/api/driftguard/worker/: __init__.py  app.py  tasks.py
apps/api/driftguard/workers/: analyzer.py
apps/api/real-test-tf/: main.tf  plan.json
apps/api/tests/: conftest.py  test_ai_review.py  test_analyses_api.py  test_analytics.py  test_analyzer.py  test_audit.py  test_auth.py  test_aws.py  test_billing.py  test_compliance.py  test_dashboard.py  test_drift.py  test_email_service.py  test_embeddings.py  test_events.py  test_events_api.py  test_findings.py  test_formatter.py  test_git_integration.py  test_github_integration.py  test_health.py  test_incidents_api.py  test_ingest.py  test_ingest_helpers.py  test_inline_review.py  test_integrations.py  test_llm_router.py  test_memory_api.py  test_memory_recall.py  test_onboarding.py  test_orgs.py  test_plan_parser.py  test_policies.py  test_policy_engine.py  test_quota.py  test_rate_limit.py  test_ratelimit.py  test_rbac.py  test_repos.py  test_reviewer.py  (+13 more)
apps/api/tests/eval/: test_review_quality.py
apps/api/tests/eval/cases/: 01_empty_pr.json  02_cost_surprise.json  03_compliance_hit.json  04_resource_deletion.json  05_iam_wildcard.json  06_unencrypted_db.json  07_k8s_privileged.json  08_logging_disabled.json  09_mixed_severity.json  10_cost_only.json
apps/cli/: README.md  pyproject.toml
apps/cli/driftguard_cli/: __init__.py  main.py  plan.py
apps/cli/driftguard_cli/output/: console.py  json_fmt.py  sarif.py
apps/cli/driftguard_cli/scanner/: engine.py
apps/cli/driftguard_cli/scanner/rules/: github_actions.py  kubernetes.py  terraform.py
apps/cli/tests/: test_cli.py
docs/: DEPLOY.md  (+9 more)
(+330 files in other folders)
