[project]
name = "driftguard-api"
version = "0.1.0"
description = "Driftguard API: AI code review for Terraform PRs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "boto3>=1.35.0",
    "pyjwt[crypto]>=2.10.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "stripe>=11.4.0",
    # worker
    "celery[redis]>=5.4.0",
    "celery-types>=0.22.0",
    # pgvector
    "pgvector>=0.3.5",
    # LLM router
    "openai>=1.40.0",
    "google-generativeai>=0.8.0",
    "tiktoken>=0.7.0",
    # storage (R2 / S3-compat already via boto3)
    "boto3>=1.35.0",
    # email
    "resend>=2.4.0",
    "python-hcl2>=4.3.0",    # Terraform HCL2 parser
    "pyyaml>=6.0",            # Kubernetes / GHA YAML
    # observability
    "posthog>=3.5.0",
    "sentry-sdk[fastapi]>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"driftguard/integrations/*" = ["S603", "S607"]
"driftguard/core/config.py" = ["S105"]
"driftguard/services/email.py" = ["E501"]   # HTML strings in f-strings can't wrap

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
