[project]
name = "driftguard-cli"
version = "0.1.0"
description = "DriftGuard CLI — static IaC security scanner for Terraform, Kubernetes, and GitHub Actions"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "DriftGuard", email = "hello@driftguard.io" }]
keywords = ["terraform", "kubernetes", "security", "iac", "static-analysis", "devsecops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-hcl2>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
dg = "driftguard_cli.main:app"
driftguard = "driftguard_cli.main:app"

[project.urls]
Homepage = "https://driftguard.io"
Documentation = "https://docs.driftguard.io/cli"
Repository = "https://github.com/up2cloud/driftguard"
"Bug Tracker" = "https://github.com/up2cloud/driftguard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["driftguard_cli"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
